--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "wabix-worklogs",
   "title": "Wabix Worklogs",
   "description": "Track and manage your work sessions and tasks for better productivity",
-  "icon": "extension-icon.png",
+  "icon": "logo.png",
   "author": "aliarthur",
   "categories": [
     "Productivity"
