--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
   ],
   "dependencies": {
     "@raycast/api": "^1.93.0",
-    "@raycast/utils": "^1.17.0"
+    "@raycast/utils": "^1.17.0",
+    "luxon": "^3.6.1"
   },
   "devDependencies": {
     "@raycast/eslint-config": "^1.0.11",
+    "@types/luxon": "^3.6.2",
     "@types/node": "20.8.10",
     "@types/react": "18.3.3",
     "eslint": "^8.57.0",
